# rcms-ga

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
config/: default.json
docs/: MARKET_RESEARCH.md  PLAN.md  PROTOCOL_FAZAN19.md  SRS.md
src/: main.cpp
src/comm/: CRC16.cpp  CRC16.h  ComTransport.cpp  ComTransport.h  ITransport.h  SerialPort.cpp  SerialPort.h  TcpSerialTransport.cpp  TcpSerialTransport.h
src/core/: AlarmManager.cpp  AlarmManager.h  ConfigManager.cpp  ConfigManager.h  ConnectionProfile.cpp  ConnectionProfile.h  DeviceGroup.h  DeviceManager.cpp  DeviceManager.h  DeviceMetadata.h  FrequencyPolicy.h  Logger.cpp  Logger.h
src/gui/: ControlPanel.cpp  ControlPanel.h  DeviceTreeWidget.cpp  DeviceTreeWidget.h  EventLogWidget.cpp  EventLogWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  StatusPanel.cpp  StatusPanel.h
src/protocol/: Fazan19Device.cpp  Fazan19Device.h  Fazan19Registers.h  IRadioDevice.h  ModbusRTU.cpp  ModbusRTU.h
src/resources/: resources.qrc
tests/: test_crc16.cpp  test_emulator.cpp  test_frequency.cpp  test_protocol.cpp
tests/emulator/: Fazan19Emulator.cpp  Fazan19Emulator.h
